apps/duplicati/service.yaml
apiVersion: v1
kind: Service
metadata: {name: duplicati, namespace: network-services}
spec:
  selector: {app.kubernetes.io/name: duplicati}
  ports:
    - {name: http, port: 8200, targetPort: http}
---
apiVersion: v1
kind: Service
metadata: {name: duplicati-access, namespace: network-services}
spec:
  selector: {app.kubernetes.io/name: duplicati}
  ports:
    - {name: http, port: 80, targetPort: access-http}
