apps/duplicati/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: {name: duplicati, namespace: network-services}
spec:
  parentRefs:
    - {name: home, namespace: traefik}
  hostnames: [duplicati.reza.network]
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-vpn-only
      backendRefs:
        - {name: duplicati-access, port: 80}
